--- a/server/server.csproj
+++ b/server/server.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Net\TcpServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protocol\Packet.cs" />
+    <Compile Include="Protocol\PacketFactory.cs" />
+    <Compile Include="Protocol\PacketType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
