Packet handler and factory skeleton defined

--- a/server/server.csproj
+++ b/server/server.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\GameServer.cs" />
     <Compile Include="Entity\Player.cs" />
     <Compile Include="Geometry\Bounds.cs" />
     <Compile Include="Geometry\Quaternion.cs" />
@@ -51,11 +52,13 @@
     <Compile Include="Image\Color.cs" />
     <Compile Include="Net\Connection.cs" />
     <Compile Include="Net\InputConnection.cs" />
+    <Compile Include="Net\PlayerConnection.cs" />
     <Compile Include="Net\TcpServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol\Packet.cs" />
     <Compile Include="Protocol\PacketFactory.cs" />
+    <Compile Include="Protocol\PacketHandler.cs" />
     <Compile Include="Protocol\PacketType.cs" />
     <Compile Include="Protocol\RequestIDPacket.cs" />
   </ItemGroup>
