--- a/server/server.csproj
+++ b/server/server.csproj
@@ -56,14 +56,20 @@
     <Compile Include="Net\TcpServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protocol\HttpRequest.cs" />
     <Compile Include="Protocol\Packet.cs" />
     <Compile Include="Protocol\PacketFactory.cs" />
     <Compile Include="Protocol\PacketHandler.cs" />
+    <Compile Include="Protocol\PacketMalformedException.cs" />
     <Compile Include="Protocol\PacketType.cs" />
     <Compile Include="Protocol\RequestIDPacket.cs" />
+    <Compile Include="Protocol\UnrecognizedPacketException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IO" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
