--- a/server/server.csproj
+++ b/server/server.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Protocol\PacketMalformedException.cs" />
     <Compile Include="Protocol\Packets\HttpRequest.cs" />
     <Compile Include="Protocol\Packets\PlayerConnectedPacket.cs" />
+    <Compile Include="Protocol\Packets\RequestSetAliasPacket.cs" />
     <Compile Include="Protocol\Packets\RequestIdPacket.cs" />
     <Compile Include="Protocol\Packets\ResponseIdPacket.cs" />
     <Compile Include="Protocol\PacketType.cs" />
