--- a/server/server.csproj
+++ b/server/server.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Net\TcpServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protocol\Constants.cs" />
     <Compile Include="Protocol\Packet.cs" />
     <Compile Include="Protocol\PacketFactory.cs" />
     <Compile Include="Protocol\PacketHandler.cs" />
@@ -74,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IO" />
+    <Folder Include="Serialization" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
