Join channel packet implemented

--- a/server/server.csproj
+++ b/server/server.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Protocol\PacketMalformedException.cs" />
     <Compile Include="Protocol\Packets\HttpRequest.cs" />
     <Compile Include="Protocol\Packets\PlayerConnectedPacket.cs" />
+    <Compile Include="Protocol\Packets\RequestJoinChannelPacket.cs" />
     <Compile Include="Protocol\Packets\RequestSetAliasPacket.cs" />
     <Compile Include="Protocol\Packets\RequestIdPacket.cs" />
     <Compile Include="Protocol\Packets\ResponseIdPacket.cs" />
