IdGenerators implemented and integrated with Player

--- a/server/server.csproj
+++ b/server/server.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Protocol\PacketType.cs" />
     <Compile Include="Protocol\ResponsePacket.cs" />
     <Compile Include="Protocol\UnrecognizedPacketException.cs" />
+    <Compile Include="Utils\IdGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
