--- a/server/server.csproj
+++ b/server/server.csproj
@@ -38,9 +38,14 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\Configuration.cs" />
+    <Compile Include="Configuration\FactionConfiguration.cs" />
+    <Compile Include="Configuration\GameConfiguration.cs" />
+    <Compile Include="Configuration\ServerConfiguration.cs" />
     <Compile Include="Core\GameServer.cs" />
     <Compile Include="Core\Player.cs" />
     <Compile Include="Core\PlayerRejectedException.cs" />
@@ -52,7 +57,6 @@
     <Compile Include="Geometry\Vector3.cs" />
     <Compile Include="Geometry\Vector4.cs" />
     <Compile Include="Image\Color.cs" />
-    <Compile Include="IO\Configuration.cs" />
     <Compile Include="IO\Serializer.cs" />
     <Compile Include="Net\Connection.cs" />
     <Compile Include="Net\ConnectionClosedException.cs" />
