--- a/server/server.csproj
+++ b/server/server.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Protocol\Packets\ResponseIdPacket.cs" />
     <Compile Include="Protocol\Packets\ResponseJoinZonePacket.cs" />
     <Compile Include="Protocol\Packets\ResponseLeaveZonePacket.cs" />
+    <Compile Include="Protocol\Packets\ResponseLoadLevelPacket.cs" />
     <Compile Include="Protocol\Packets\ResponseLockZonePacket.cs" />
     <Compile Include="Protocol\Packets\ResponsePlayerJoinedPacket.cs" />
     <Compile Include="Protocol\Packets\ResponseSetHostPacket.cs" />
