--- a/server/server.csproj
+++ b/server/server.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Protocol\Packets\RequestIdPacket.cs" />
     <Compile Include="Protocol\Packets\RequestSetServerOptionPacket.cs" />
     <Compile Include="Protocol\Packets\ResponseIdPacket.cs" />
+    <Compile Include="Protocol\Packets\ResponseJoiningZonePacket.cs" />
     <Compile Include="Protocol\Packets\ResponseJoinZonePacket.cs" />
     <Compile Include="Protocol\Packets\ResponseLeaveZonePacket.cs" />
     <Compile Include="Protocol\Packets\ResponseLoadLevelPacket.cs" />
